src/test/ui/error-codes/E0442.stderr
error[E0442]: intrinsic argument 1 has wrong type: found vector with length 16, expected length 8
  --> $DIR/E0442.rs:24:5
   |
LL |     fn x86_mm_adds_epi16(x: i8x16, y: i32x4) -> i64x2;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0442]: intrinsic argument 2 has wrong type: found vector with length 4, expected length 8
  --> $DIR/E0442.rs:24:5
   |
LL |     fn x86_mm_adds_epi16(x: i8x16, y: i32x4) -> i64x2;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0442]: intrinsic return value has wrong type: found vector with length 2, expected length 8
  --> $DIR/E0442.rs:24:5
   |
LL |     fn x86_mm_adds_epi16(x: i8x16, y: i32x4) -> i64x2;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0442`.
